--- a/learning/learning.info.yml
+++ b/learning/learning.info.yml
@@ -1,5 +1,6 @@
-name: 'learning'
+name: 'Learning'
 type: module
 description: 'I have started new module to learn drupal 8'
 core: 8.x
 package: 'Learning'
+version: VERSION
