--- a/learning/learning.routing.yml
+++ b/learning/learning.routing.yml
@@ -4,7 +4,7 @@ learning.first:
     _controller: \Drupal\learning\Controller\LearningController::first_page
     _title: 'Welcome Arulraj'
   requirements:
-    _permission: 'access content'
+    _permission: 'view learning page'
 
 learning.sampleform:
   path: '/sample-form'
